finance-service/src/main/java/com/example/financetracker/finance/api/error/CategoryNotFoundException.java
package com.example.financetracker.finance.api.error;

public class CategoryNotFoundException extends RuntimeException {

    public CategoryNotFoundException(String message) {
        super(message);
    }
}
